added weather feature

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         </p>
     </div>
     <div class="startPage__startGame">
-      <button id="startGameBtn">StartGame</button>
+      <div class="startPage__startGame__dogInfo">
+        <input id="dogName" type="text" placeholder="Choose a name ">
+        <input id="cityName" type="text" placeholder="which city do you live in?">
+      </div>
+      <div class="startPage__startGame__btn"><button id="startGameBtn">StartGame</button></div>
     </div>
   </div>
 
@@ -64,6 +68,10 @@
     <div class="container">
 
       <div class="container__dogStatus">
+        <div class="container__dogStatus__city">
+          
+        </div>
+
         <div class="container__dogStatus__money">
           <p id="money"></p>
         </div>
